--- a/A7/styles.css
+++ b/A7/styles.css
@@ -32,13 +32,14 @@ select, input {
 #parent {
   display: flex;
   justify-content: space-around;
+  margin-top: 5px;
 }
 
 #left {
-  width: 25%;
+  width: 35%;
 }
 
 #right {
-  width: 65%;
+  width: 55%;
 }
 
